deploy/k3s/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlas-desk
  namespace: minipay
spec:
  hostnames:
    - ticket.su46proj.site
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: minipay-gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: atlas-desk
          namespace: atlas-desk
          port: 8000
